fix(plugins/plugin-client-common): sometimes both the block action buttons and the timestamp are visible at the same time
Fixes #5936

--- a/plugins/plugin-client-common/web/scss/components/Terminal/Block.scss
+++ b/plugins/plugin-client-common/web/scss/components/Terminal/Block.scss
@@ -43,12 +43,6 @@ $focus-color: var(--color-brand-01);
   list-style: none;
 }
 
-@include BlockHoverOrFocus {
-  @include BlockTimestamp {
-    @include DisappearOnHover;
-  }
-}
-
 @include FinishedBlockWithNoOutput {
   display: none;
 }
@@ -129,8 +123,6 @@ $focus-color: var(--color-brand-01);
   li:focus.repl-block,
   li:hover.repl-block[data-is-focused],
   .repl-block[data-is-focused] {
-    @include show-block-action-buttons;
-
     &:before {
       opacity: 1;
     }
@@ -348,5 +340,12 @@ $focus-color: var(--color-brand-01);
   }
   .kui--repl-block-re-editing {
     @include timestamp-like();
+  }
+}
+@include InputWrapper {
+  &:hover {
+    @include BlockTimestamp {
+      @include DisappearOnHover;
+    }
   }
 }
